<resources>
    <string name="app_name">BookSearch</string>
    <string name="com_auth0_client_id">Du0BPJyhpg9m4LFWnV3U93IGPmJlVyoc</string>
    <string name="com_auth0_domain">naturallyash.auth0.com</string>
    <string name="GOODREADS_BASE_URL">https://www.goodreads.com</string>
    <string name="oauth_authorize_param">/oauth/authorize</string>
    <string name="oauth_mobil_param">/oauth/authorize?mobile=1</string>
    <string name="oauth_access_token_param">/oauth/access_token</string>
    <string name="oauth_request_token_param">/oauth/request_token</string>
    <string name="no_search_term">No search term entered</string>
    <string name="no_connection">No Connection!</string>
    <string name="no_books">No books found.</string>
    <string name="search_hint">Search</string>
    <string name="GOOGLE_API_SEARCH">https://www.googleapis.com/books/v1/volumes?q=</string>
    <string name="by_placeholder">by </string>
    <string name="book_activity_child">book_activity_child</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="bookshelf_btn_string">BookShelf</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="favorites_menu">Favorites</string>
    <string name="share_menu">Share</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_communicate">Communicate</string>
    <string name="no_favorites">No books added to Favorites</string>
    <string name="ereader_string">eReader</string>
    <string name="no_e_books_string">No e-Books</string>
    <string name="action_search">Search</string>
    <string name="action_qr_scan">QR scan</string>
    <string name="login_with_goodreads_string">Login with Goodreads</string>
    <string name="logging_in_string">logging in</string>
    <string name="must_be_logged_in_string">Must be logged in</string>
    <string name="login_in_string">Log in</string>
    <string name="currently_reading_string">Currently Reading</string>
    <string name="want_to_read_string">Want To Read</string>
    <string name="read_string">Read</string>
    <string name="books_in_series_string">Books in Series</string>
    <string name="similar_books_string">Similar Books</string>
    <string name="fontawesome_star">{fa-star}</string>
    <string name="author_string">Author</string>
    <string name="published_string">Published</string>
    <string name="ratings">ratings</string>
    <string name="reviews">reviews</string>
    <string name="synopsis_string">Synopsis</string>
    <string name="no_books_in_shelf_string">No Books In Shelf</string>
    <string name="read_more_string">Read More</string>
    <string name="view_more_string">View More</string>
    <string name="logout_string">Logout</string>
    <string name="exit_string">Exit</string>
    <string name="audiobooks">Audiobooks</string>
    <string name="audiobook_library">Audiobook Library</string>
    <string name="now_playing">Now Playing</string>
</resources>
