<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
       <item
           android:id="@+id/favorites"
           android:icon="@drawable/ic_action_favorite"
           android:title="@string/favorites_menu"/>
        <item
            android:id="@+id/menu_reader"
            android:icon="@drawable/ic_library_books_white_24dp"
            android:title="@string/ereader_string"/>
        <item
            android:id="@+id/menu_audiobooks"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/audiobooks"/>
    </group>

    <item android:title="@string/logout_string">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit_string" />

        </menu>
    </item>

</menu>
